--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DotPuzzle</string>
     <string name="classic">Classic</string>
     <string name="arcade">Arcade</string>
+    <string name="record">Record: </string>
 </resources>
